--- a/gans/mnist-gan.ipynb
+++ b/gans/mnist-gan.ipynb
@@ -6,8 +6,7 @@
       "name": "gan.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jhashekhar/generative-models/blob/master/gans/mnist-gan.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "wuyLrt1zOpvj",
@@ -661,36 +650,6 @@
           "metadata": {
             "tags": []
           }
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "2PyKT4300hrA",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "581b6e09-80b7-49b4-88e3-1623e15487a3"
-      },
-      "cell_type": "code",
-      "source": [
-        "samples[99][0].cpu().detach().numpy().shape"
-      ],
-      "execution_count": 158,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(784,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 158
         }
       ]
     }
